Main menu centered

--- a/css/index.css
+++ b/css/index.css
@@ -848,6 +848,9 @@ body {
 body i {
     margin-right: 4px
 }
+.main-nav .grid {
+    text-align: center;
+}
 
 .wrap .grid, .grid.wrap {
     max-width: 960px;
